# pnd_teleoperation

./: .clang-format  .gitignore  .pteleop-completion.bash  README.md  build.sh  pre_commit.sh  preview.sh  pyproject.toml  pytest.ini  run.sh  run_rviz2.sh  setup_cli.bash
adam_description/: CMakeLists.txt  package.xml
adam_description/urdf/adam_lite/meshes/: footLeftY.STL  footRightY.STL  forearmLeft.STL  forearmRight.STL  hipRollLeft.STL  hipRollRight.STL  shinLeft.STL  shinRight.STL  shin_Left.STL  shin_Right.STL  shoulderBaseLeft.STL  shoulderBaseRight.STL  shoulderPitchLeft.STL  shoulderPitchRight.STL  shoulderRollLeft.STL  shoulderRollRight.STL  shoulderYawLeft.STL  waistPitch.STL  wristYawLeft.STL  wristYawRight.STL
adam_description/urdf/adam_lite/urdf/: adam_lite.urdf
adam_retarget/: CMakeLists.txt  package.xml
adam_retarget/include/adam_retarget/: Retarget.hpp  utils.hpp
adam_retarget/launch/: noitom_adam_sp.py
adam_retarget/opti_config/adam_sp/: Adam_SP_Single_Noitom_API_FingerUnlimitedTurbo_ref_io.json  Adam_SP_Single_Noitom_API_FingerUnlimited_ref_io.json  Adam_SP_Single_Noitom_Hand_By_Pos_Debug_ref_io.json
adam_retarget/opti_config/adam_u/: Adam_U_Noitom_Deploy_ref_io.json
adam_retarget/scripts/: get_tf.py  remove_timestamp.py
adam_retarget/src/: Retarget.cpp  main.cpp
adam_state_publisher/: CMakeLists.txt
adam_state_publisher/include/adam_state_publisher/: adam_state_publisher.hpp
adam_state_publisher/launch/: rsp-launch-urdf-file.xml  rsp-launch-urdf-file1.py  rsp-launch-urdf-file2.py  rsp-launch-urdf-inline.py  rsp-launch-xacro-command-subst.py  rsp-launch-xacro-command-subst.xml  rsp-launch-xacro-popen.py
adam_state_publisher/src/: adam_state_publisher.cpp
adam_state_publisher/test/: two_links_moving_joint-launch.py
bringup/: CMakeLists.txt
bringup/launch/: retarget_adam_sp.launch.py  retarget_adam_u.launch.py  retarget_vr.launch.py  test_retarget_noitom_hand_fix_rosbag.launch.py  test_retarget_noitom_rosbag.launch.py
docker/: Dockerfile  compose.yaml  run.sh  update_env.sh
docker/entrypoint/: init
noitom_mocap/: CMakeLists.txt  package.xml
noitom_mocap/include/noitom_mocap/: noitom_data_handler.h
noitom_mocap/src/: main.cpp  noitom_data_handler.cpp
scripts/: start_caddy.sh
scripts/cli/: __init__.py  caddy.py  check_env.py  common.py  launch_cli.py  preview.py  pteleop.py  setup_cli.py  teleop_cli.py  teleop_cmd.py
src/algorithm/adam_mink/: package.xml  setup.cfg  setup.py
src/algorithm/adam_retarget/: CMakeLists.txt  package.xml
src/algorithm/adam_retarget/include/adam_retarget/: Retarget.hpp
src/algorithm/adam_retarget/launch/: dump_bone.launch.py  handle_vr_mocap.launch.py
src/algorithm/adam_retarget/opti_config/: compile.py
src/algorithm/adam_retarget/opti_config/adam_l/: Adam_L_Meta_VR_Debug_ref_io.json
src/algorithm/adam_retarget/opti_config/adam_sp/: Adam_SP_Single_Noitom_API_ref_io.json  Adam_SP_Single_Noitom_Debug_ref_io.json
src/algorithm/adam_retarget/opti_config/adam_u/: Adam_U_Noitom_Deploy_opti.json  Adam_U_Noitom_Deploy_ref_io.json
src/algorithm/adam_retarget/opti_config/adam_u_codegen_test/: Adam_U_Noitom_Deploy_opti.json  Adam_U_Noitom_Deploy_ref_io.json  extend_func.c  param_func.c
src/algorithm/adam_retarget/opti_config/meta_vr/adam_u/: Adam_U_Meta_VR_Deploy_opti.json  Adam_U_Meta_VR_Deploy_ref_io.json  extend_func.c  opti_0.c  param_func.c
src/algorithm/adam_retarget/opti_config/noitom/adam_sp_pro/: Adam_SPPro_Noitom_Deploy_opti.json  Adam_SPPro_Noitom_Deploy_ref_io.json  extend_func.c  param_func.c
src/algorithm/adam_retarget/opti_config/pteleop/threepoint/adam_u/: Adam_U_ThreePoint_Deploy_opti.json  Adam_U_ThreePoint_Deploy_ref_io.json  extend_func.c  opti_0.c  param_func.c
src/algorithm/adam_retarget/opti_config/zerolab/adam_u/: Adam_U_ZeroLab_Deploy_opti.json  Adam_U_ZeroLab_Deploy_ref_io.json  opti_0.c  param_func.c
src/algorithm/adam_retarget/opti_config/zerolab/adap_sp_pro/: Adam_SPPro_ZeroLab_Deploy_opti.json  Adam_SPPro_ZeroLab_Deploy_ref_io.json
src/algorithm/adam_retarget/scripts/: dump_rosbag.py  get_tf.py  test_passthrough.py
src/algorithm/adam_retarget/src/: Retarget.cpp  main.cpp
src/algorithm/adam_retarget/test/: utils_test.cpp
src/bringup/: package.xml
src/bringup/launch/: mink-adam_pro-noitom.launch.py  mink_adam_pro_noitom.launch.py  mink_adam_u_webvr.launch.py  mink_adam_u_webvr_sg.launch.py  pinocchio-adam_pro-zerolab.launch.py  retarget_adam_pro.launch.py  retarget_adam_pro_zerolab.launch.py  retarget_adam_sp.launch.py  retarget_adam_u.launch.py  retarget_adam_u_pteleop.launch.py  retarget_adam_u_vr.launch.py  retarget_adam_u_zerolab.launch.py  retarget_vr.launch.py  test_mink_vr.launch.py  test_retarget_adam_u_pteleop.launch.py  test_retarget_noitom_adam_u_rosbag.launch.py  test_retarget_noitom_adam_u_rosbag_codgen.launch.py  test_retarget_noitom_hand_fix_rosbag.launch.py  test_retarget_noitom_rosbag.launch.py
src/bringup/rviz/: robot.rviz
src/common/shared_utils/: package.xml  setup.py
src/driver/vr_mocap/: setup.cfg  setup.py
src/driver/webvr_mocap/: package.xml  setup.cfg  setup.py
src/driver/webvr_mocap/test/: test_utils.py
src/driver/webvr_mocap/webvr_mocap/: utils.py  webvr_mocap.py
src/driver/webvr_mocap/webvr_mocap/pws/: check_network.py  check_version.py  common.py  jetson_ws.py  upgrade.py
src/driver/webvr_mocap/webvr_mocap/vr/: config.yaml  vr_monitor.py
src/driver/webvr_mocap/webvr_mocap/vr/web-ui/: index.html  interface.js  vr_app.js
src/driver/webvr_mocap/webvr_mocap/vr/xlevr/: config.py  utils.py
src/driver/webvr_mocap/webvr_mocap/vr/xlevr/inputs/: __init__.py  base.py  vr_ws_server.py
src/driver/zerolab_mocap/: CMakeLists.txt  package.xml
src/tests_bag/: package.xml  setup.cfg  setup.py
src/tests_bag/tests_bag/: play_bag.py
src/visualization/adam_state_publisher/: package.xml
tests/: test_pteleop_cli.py  test_teleop_cmd.py
tests_bag/: setup.py
tests_bag/tests_bag/: play_bag.py
vr_mocap/: package.xml  setup.cfg  setup.py
vr_mocap/vr_mocap/: vr_mocap.py
(+517 files in other folders)
